# 0xParc-Learning-Groups

./: .gitignore  README.md
Halo2 Learning Group/Class 2/halo2-examples/fibonnaci/: Cargo.toml
Halo2 Learning Group/Class 2/halo2-examples/src/: example1.rs  lib.rs
Halo2-Learning-Group/: README.md
Halo2-Learning-Group/halo2-lib/: Cargo.toml  README.md
Halo2-Learning-Group/halo2-lib/data/: fibonacci.in
Halo2-Learning-Group/halo2-lib/src/: main.rs  run.sh
Halo2-Learning-Group/halo2-lib/src/fibonacci/: fibonacci.rs
Halo2-Learning-Group/halo2-proofs/: Cargo.toml  README.md
Halo2-Learning-Group/halo2-proofs/src/: example1.rs  example2.rs  lib.rs  range_check.rs
Lecture 6 Algorithms for Efficient Cryptographic Operations/: double_and_add.py
MIT-IAP-2023-Modern-Zero-Knowledge-Cryptography/Session-2-Circom-1/: IsNegative.circom  IsZero.circom
MIT-IAP-2023-Modern-Zero-Knowledge-Cryptography/Session-3-Math-Building-Blocks/: implementation.py
MIT_IAP_2023-Modern_Zero_Knowledge_Cryptography/Session 2 Circom 1/: Num2Bits.py
Session 1 - Introduction to ZK/ZKP for DLOG/: modular_arithmetic.py
Session 1 Introduction_to_ZK/ZKP for DLOG/: implementation.py
Session 10 Applied ZK Constructions 1/: ~$Session 10_ Applied ZK Constructions 1.pptx
Session 2 - Circom 1/: Num2Bits.circom  Num2Bits.py
Session 2 Circom 1/: IsEqual.circom  LessThan.circom  Selector.circom
Session 3  Math Building Blocks/: implementation.py
Session 3 -  Math Building Blocks/: implementation.py
Session 4 Circom 2/: class.circom
(+12 files in other folders)
