[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_examples"
path = "src/lib.rs"

[dependencies]
ff = "0.12"
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
halo2-scaffold = { git = "https://github.com/axiom-crypto/halo2-scaffold", branch = "main" }
rand = "0.8"
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"

[features]
dev-graph = ["halo2-base/dev-graph", "plotters"]

[toolchain]
channel = "nightly"